// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AwesomeComponent Snapshots renders correctly 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "blue",
        "fontSize": 20,
      }
    }
  >
    N/A
  </Text>
</View>
`;

exports[`AwesomeComponent Snapshots renders correctly when loading 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    Loading...
  </Text>
</View>
`;

exports[`AwesomeComponent Snapshots renders correctly when not loading and error present 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
      }
    }
  >
    Err!
  </Text>
</View>
`;

exports[`AwesomeComponent Snapshots renders correctly when not loading and username not present 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "blue",
        "fontSize": 20,
      }
    }
  >
    N/A
  </Text>
</View>
`;

exports[`AwesomeComponent Snapshots renders correctly when not loading and username present 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "blue",
        "fontSize": 20,
      }
    }
  >
    John Doe
  </Text>
</View>
`;
